<resources>
    <string name="app_name">Lesson_3_Safarov</string>
    <string name="sing_in">Войти</string>
    <string name="sing_in_title">@string/sing_in</string>
    <string name="sing_in_login_hint">Логин</string>
    <string name="sing_in_password_hint">Пароль</string>
    <string name="sing_in_action">@string/sing_in</string>
    <string name="input_empty_error">Поле заполнено неверно</string>
    <string name="unknown_error">Произошла непредвиденная ошибка. Пожалуйста, попробуйте позже.</string>
    <string name="action_profile">Профиль</string>
    <string name="catalog">Каталог</string>
    <string name="unexpected_error">Произошла непредвиденная ошибка</string>
    <string name="refresh">Обновить</string>
    <string name="dallas_cowboys_content_description">dallas_cowboys_content_description</string>
    <string name="buy">Купить</string>
    <string name="product_image_content_description">product_image_content_description</string>
    <string name="size">Размер</string>
    <string name="product_image_preview_content_description">product_image_preview_content_description</string>
    <string name="buy_now">Купить сейчас</string>
    <string name="product_full_image_content_description">product_full_image_content_description</string>
    <string name="ask_notification_title">Пу пу пу</string>
    <string name="ask_notification_message">Нам честно нужно это разрешение.</string>
    <string name="ask_notification_decline">Не, не надо</string>
    <string name="ask_notification_accept">Ну ладно, давай</string>
    <string name="House">Дом</string>
    <string name="apartment">Квартира</string>
    <string name="delivery_date">Дата доставки</string>
    <string name="_1">1</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="placing_an_order">Оформление заказа</string>
    <string name="buy_for_price">Купить за %1$s</string>
    <string name="close_content_description">close</string>
    <string name="apartment_selection">Выбор дома</string>
    <string name="select">Выбрать</string>
    <string name="order_creation_success">Заказ №%1$d от %2$s был успешно оформлен</string>
    <string name="order_creation_error">Во время оформления заказа произошла ошибка</string>
    <string name="circular_profile_photo">circular_profile_photo</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="occupation">Род деятельности</string>
    <string name="change">Изменить</string>
    <string name="developer">Разработчик</string>
    <string name="tester">Тестировщик</string>
    <string name="manager">Менеджер</string>
    <string name="other">Другое</string>
    <string name="choose_from_gallery">Выбрать из галереи</string>
    <string name="make_a_photo">Сделать снимок</string>
    <string name="img_prefix">JPEG_%1$s_</string>
    <string name="suffix_img">.jpg</string>
    <string name="other_occupation">Другой род деятельности</string>
</resources>