<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/normal_100">

    <TextView
        android:id="@+id/developer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_300"
        android:background="@drawable/selectable_item_background"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/normal_100"
        android:text="@string/developer"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_item_size" />

    <TextView
        android:id="@+id/tester"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_300"
        android:background="@drawable/selectable_item_background"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/normal_100"
        android:text="@string/tester"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_item_size" />

    <TextView
        android:id="@+id/manager"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_300"
        android:background="@drawable/selectable_item_background"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/normal_100"
        android:text="@string/manager"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_item_size" />

    <TextView
        android:id="@+id/other"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_300"
        android:background="@drawable/selectable_item_background"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/normal_100"
        android:text="@string/other"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_item_size" />
</androidx.appcompat.widget.LinearLayoutCompat>