<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/smalt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/catalog_menu"
        app:title="@string/catalog"
        app:titleTextColor="@color/white" />

    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            app:indicatorColor="@color/smalt"
            app:indicatorSize="@dimen/indicator_progress_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/normal_200"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/errorImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/dallas_cowboys_content_description"
                android:src="@drawable/dallas_cowboys" />

            <TextView
                android:id="@+id/unexpectedErrorTitle"
                style="@style/TextAppearance.Secondary.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_150"
                android:text="@string/unexpected_error"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/unexpectedErrorDescription"
                style="@style/TextAppearance.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_50"
                android:textAlignment="center" />

            <Button
                android:id="@+id/errorRefreshButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_150"
                android:text="@string/refresh" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/catalogRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/catalog_list_item" />

    </ViewFlipper>

</androidx.constraintlayout.widget.ConstraintLayout>