<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="@dimen/normal_50">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_background"
            android:elevation="@dimen/map_items_elevation">

            <ImageView
                android:id="@+id/closeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/map_toolbar_padding_vertical"
                android:layout_marginStart="@dimen/normal_75"
                android:contentDescription="@string/close_content_description"
                android:src="@drawable/ic_close"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titleText"
                style="@style/TextAppearance.Primary.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_200"
                android:text="@string/apartment_selection"
                android:textColor="@color/secondary"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/closeIcon"
                app:layout_constraintEnd_toStartOf="@+id/selectButton"
                app:layout_constraintStart_toEndOf="@+id/closeIcon"
                app:layout_constraintTop_toTopOf="@+id/closeIcon" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/selectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/normal_75"
                android:backgroundTint="@color/white"
                android:text="@string/select"
                android:textColor="@color/smalt"
                android:textSize="@dimen/text_button_buy_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="?attr/colorControlHighlight" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/selectedApartment"
            style="@style/TextAppearance.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/normal_50"
            android:background="@drawable/rounded_corner_background"
            android:elevation="@dimen/map_items_elevation"
            android:gravity="center"
            android:paddingHorizontal="@dimen/normal_100"
            android:paddingVertical="@dimen/normal_100"
            android:visibility="gone" />
    </FrameLayout>

</FrameLayout>


